# dont_mess_with_my_papitas

./: .gitignore  Cargo.toml  Cross.toml  Makefile.toml  activate.sh
.cargo/: config.toml
cross_image/: Dockerfile
godot/: assets  export_presets.cfg  project.godot
godot/assets/: About.png.import  AboutSelect.png.import  Corazones.png.import  CorazonesEmpty.png.import  CorazonesFull.png.import  Escudo.png.import  Espada.png.import  Fences.png.import  Inventario.png.import  Invisible.png.import  MenuCoverFull.png.import  Mercader.png.import  MercaderIdea.png.import  Mesita.png.import  NewGameSelect.png.import  OptionsSelect.png.import  PapitasFarmSign.png.import  Semillas.png.import  SmollCorazon.png.import  TierraSeed.png.import  Tierrafalsaconpapitas.png.import  TroncoInventario.png.import  Zapatito.png.import  awita.png.import  comprar.wav.import  godot-ferris-1024x1024.png.import  godot-ferris-120x120.png.import  godot-ferris-128x128.png.import  godot-ferris-16x16.png.import  godot-ferris-76x76.png.import  golpe.wav.import  monedas.wav.import  papita_out.wav.import  slimeVerde.png.import  slimeazul.png.import
godot/native/: Coin.gdns  Data.gdns  GlobalState.gdns  Hitbox.gdns  MerchantEye.gdns  Papita.gdns  Paused.gdns  PersistentState.gdns  Sign.gdns  Slime.gdns  Title.gdns  game.gdnlib
rust/: Cargo.toml
rust/src/: coin.rs  data.rs  dirt.rs  game.rs  global_state.rs  globalscope.rs  hitbox.rs  hud.rs  input_const.rs  joystick.rs  lib.rs  merchant.rs  node_ext.rs  papita.rs  paused.rs  player.rs  presistent_state.rs  sign.rs  slime.rs  title.rs  utils.rs
(+77 files in other folders)
