[package]
name = "dmwmp"
version = "0.1.0"
authors = ["roger"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cfg-if = "1.0.0"
gdnative = { git = "https://github.com/Bromeon/godot-rust.git", branch = "feature/godot-3.5", features = ["serde"] }
instant = { path = "./libs/instant/" }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
strum = { version = "0.24.1", features = ["derive"] }
